--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,30 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta charset="UTF-8">
+  <meta name="description" content="Clinica Dental Santaneca">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Title -->
+  <title>Clinica Dental</title>
+  <!-- Favicon -->
+  <link rel="icon" href="./img/core-img/favicon.ico">
+  <!-- Core Stylesheet -->
+  <link rel="stylesheet" href="style.css">
   <!-- Favicon -->
   <link rel="icon" href="./img/core-img/favicon.ico">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-  <!-- Title -->
-  <title>Clinica Dental</title>
-
-  <!-- Core Stylesheet -->
-  <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-
 
   <div id="root"></div>
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -38,15 +38,15 @@
     -->
 
       <!-- jQuery js -->
-  <script src="js/jquery.min.js"></script>
+  <!-- <script src="js/jquery.min.js"></script> -->
   <!-- Popper js -->
-  <script src="js/popper.min.js"></script>
+  <!-- <script src="js/popper.min.js"></script> -->
   <!-- Bootstrap js -->
-  <script src="js/bootstrap.min.js"></script>
+  <!-- <script src="js/bootstrap.min.js"></script> -->
   <!-- All js -->
-  <script src="js/dento.bundle.js"></script>
+  <!-- <script src="js/dento.bundle.js"></script> -->
   <!-- Active js -->
-  <script src="js/default-assets/active.js"></script>
+  <!-- <script src="js/default-assets/active.js"></script> -->
 </body>
 
 </html>
